<resources>
    <string name="app_name">Ecommerce Apps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_is_not_available">Image is not available yet</string>
    <string name="not_available_yet">Not available yet</string>
    <string name="ic_star_desc">This is star icon</string>
    <string name="btn_back_desc">This is back button</string>
    <string name="price">$ %1$s</string>
    <string name="name">Name: %1$s</string>
    <string name="phone">Phone: %1$s</string>
    <string name="email">Email: %1$s</string>
    <string name="userName">UserName: %1$s</string>
    <string name="address">Address: %1$s</string>
    <string name="city">City: %1$s</string>
    <string name="dash_for_null">-</string>
    <string name="login">Login</string>
    <string name="input_password">Enter your password here</string>
    <string name="input_email">Enter your email here</string>
    <string name="you_must_fill_all_data">You Must Fill All Data</string>
    <string name="ecommerce_apps">Ecommerce Apps</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="image_profile">Image Profile</string>
    <string name="home">Home</string>
    <string name="product_detail">Product Detail</string>
    <string name="my_profile">My Profile</string>
    <string name="cart">Cart</string>
    <string name="cart_empty">Cart Empty</string>
    <string name="success_updated_cart">Success Updated Cart</string>
    <string name="order_success">Thanks for your Order!</string>
    <string name="Completed">Completed</string>
    <string name="order_time">Order Time: %1$s</string>
    <string name="total_amount">Total Amount: %1$s</string>
</resources>