<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/image_is_not_available"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelImgNotAvailable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/image_is_not_available"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/imgProduct"
            app:layout_constraintEnd_toEndOf="@+id/imgProduct"
            app:layout_constraintStart_toStartOf="@+id/imgProduct"
            app:layout_constraintTop_toTopOf="@+id/imgProduct"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/txtTitle"
            style="@style/ListTitleStyle"
            android:layout_width="0dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgProduct"
            tools:text="Title" />

        <TextView
            android:id="@+id/txtCategoryName"
            style="@style/ListTitleStyle"
            android:layout_marginTop="10dp"
            android:text="@string/dash_for_null"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@id/txtTitle"
            app:layout_constraintTop_toBottomOf="@id/txtTitle"
            tools:text="Category" />

        <TextView
            android:id="@+id/txtPrice"
            style="@style/ListTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/not_available_yet"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtCategoryName"
            tools:text="Rp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPrice"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/btnMinusCart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtQuantity"
                style="@style/ListTitleStyle"
                android:layout_width="wrap_content"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1" />

            <ImageView
                android:id="@+id/btnPlusCart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
